# pcsc-rs

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  Cross.toml  README.md  build.rs  memo.txt  renovate.json
.github/workflows/: build.yml  do-not-merge.yml  release-please.yml  rustfmt.yml  security-audit.yml  versioning.yml
.release-please/: .release-please-manifest.json  release-please-config.json
src/: gpu.rs  lib.rs  main.rs  mimi.rs  packet.rs  status.rs  sysinfo_instance.rs  unix_to_date.rs
src/status/: mod.rs
src/thread_message/: mod.rs
src/threads/: mod.rs
