[package]
name = "pcsc-rs"
version = "1.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "=1.7.1"
cfg-if = "=1.0.0"
dotenvy = "=0.15.7"
itertools = "0.13.0"
regex = "=1.11.1"
rust_socketio = "=0.6.0"
# https://github.com/jaemk/self_update/issues/136
self_update = "=0.39.0"
serde = { version = "=1.0.215", features = ["derive"] }
serde_derive = "=1.0.215"
serde_json = "=1.0.133"
sysinfo = { version = "=0.33.0", default-features = false, features = ["disk", "multithread", "system"] }

[build-dependencies]
git2 = { version = "=0.19.0", default-features = false }

[target.'cfg(windows)'.build-dependencies]
winres = "=0.1.12"

[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "ios")))'.dependencies]
openssl = { version = "=0.10.68", features = ["vendored"] }

[lints.clippy]
pedantic = "warn"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
