[package]
name = "pcsc-rs"
version = "1.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
arc-swap = "=1.7.1"
axum = "0.8.2"
bytes = "1.9.0"
cfg-if = "=1.0.0"
dotenvy = "=0.15.7"
fastwebsockets = {version = "0.10.0", features = ["upgrade"]}
http-body-util = "0.1.2"
hyper = "1.5.2"
hyper-util = "0.1.10"
itertools = "=0.14.0"
regex = "=1.11.1"
rust_socketio = "=0.6.0"
# https://github.com/jaemk/self_update/issues/136
self_update = "=0.42.0"
serde = { version = "=1.0.217", features = ["derive"] }
serde_derive = "=1.0.217"
serde_json = "=1.0.135"
sysinfo = { version = "=0.33.1", default-features = false, features = ["disk", "multithread", "system"] }
tokio = {version = "1.43.0", features = ["rt-multi-thread"]}

[build-dependencies]
git2 = { version = "=0.20.0", default-features = false }

[target.'cfg(windows)'.build-dependencies]
winres = "=0.1.12"

[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "ios")))'.dependencies]
openssl = { version = "=0.10.68", features = ["vendored"] }

[lints.clippy]
pedantic = "warn"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
